applications/ingressgateway-develop/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway-develop
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "argocd.rizkidoank.internal"
        - "grafana.rizkidoank.internal"
      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  hosts:
  - "argocd.rizkidoank.internal"
  gateways:
    - ingressgateway-develop
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-operator-grafana
spec:
  hosts:
  - "grafana.rizkidoank.internal"
  gateways:
    - ingressgateway-develop
  http:
    - route:
        - destination:
            host: prometheus-operator-grafana.infrastructure.svc.cluster.local
            port:
              number: 80
